bottom tab using voyager navigation

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,19 @@ dependencies {
 
     //navigator
     implementation "cafe.adriel.voyager:voyager-navigator:$voyager"
+
+    // BottomSheetNavigator
+    implementation "cafe.adriel.voyager:voyager-bottom-sheet-navigator:$voyager"
+
+    // TabNavigator
+    implementation "cafe.adriel.voyager:voyager-tab-navigator:$voyager"
+
+    // Transitions
+    implementation "cafe.adriel.voyager:voyager-transitions:$voyager"
+
+    // Android ViewModel integration
+    implementation "cafe.adriel.voyager:voyager-androidx:$voyager"
+
+    // Hilt integration
+    implementation "cafe.adriel.voyager:voyager-hilt:$voyager"
 }
