--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,18 @@
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.VoyagerNavigationLibrary">
+            <!--<intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>-->
+        </activity>
+
+        <activity
+            android:name=".bottomSheet.BottomSheetActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.VoyagerNavigationLibrary">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
